--- a/hazem/Contact us.html
+++ b/hazem/Contact us.html
@@ -7,16 +7,39 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/style.css">
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
-    <!-- Optional JavaScript -->
+      <form id="form1">
+        <div class="form-group" >
+            <h3>Get help with GameMaster</h3>
+            <hr>
+            <br>
+          <label for="exampleInputEmail1">From</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        </div>
+        <div class="form-group">
+            <label >subject</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" >
+        </div>
+        <div class="form-group">
+            <label >How can we help?</label>
+            <br>
+            <textarea cols="30" rows="5"></textarea>
+          </div>
+          <button type="submit" class="btn btn-success">send request</button>
+      </form>
+      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+  <footer  style="background-color: rgb(177, 177, 177)">
+    <div id="div_footer">
+     <h6> <a href="#">terms</a> <a href="#">privacy</a> </h6> 
+    </div>
+  </footer>
 </html>
