--- a/hazem/Contact us.html
+++ b/hazem/Contact us.html
@@ -9,10 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-<<<<<<< HEAD
     <script src="https://kit.fontawesome.com/1b6dbc5d1f.js"></script>
 
-    <link rel="stylesheet" href="../youssif/css/style.css">
+    <link rel="stylesheet" href="D:\GameMasterProject\game\youssif\css/style.css">
     <title>Hello, world!</title>
 </head>
 
@@ -20,16 +19,6 @@
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <!-- Brand -->
         <a class="navbar-brand" href="/home">
-=======
-    <link rel="stylesheet" href="../layoutStyle.css">
-    <script src="https://kit.fontawesome.com/1b6dbc5d1f.js"></script>
-    <title>Hello, world!</title>
-  </head>
-  <body>
-      <nav class="navbar navbar-expand-lg navbar-dark ">
-          <!-- Brand -->
-          <a class="navbar-brand" href="../youssif/index.html">
->>>>>>> 78d3e9c71a210dc35d819ac04e98cf30698f7d78
             <h1>Logooo</h1>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -39,20 +28,8 @@
         <!-- Links -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ">
-<<<<<<< HEAD
                 <li class="nav-item">
                     <a class="nav-link" href="/home">Home</a>
-=======
-              <li class="nav-item">
-                <a class="nav-link" href="../youssif/index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/majors">Games</a>
-              </li>
-            
-              <li class="nav-item">
-                  <a class="nav-link" href="Contact us.html">Support</a>
->>>>>>> 78d3e9c71a210dc35d819ac04e98cf30698f7d78
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/majors">Games</a>
@@ -63,25 +40,16 @@
                 </li>
 
                 <li class="nav-item">
-<<<<<<< HEAD
                     <a class="nav-link" href="/dashboard">About Us</a>
                 </li>
 
                 <li class="nav-item ml-auto"><a id="loginBtn" class="nav-link" href="/login">Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="/search" style="font-size: 20px"><i
-=======
-                    <a class="nav-link" href="../kyrillos/About us.html">About Us</a>
-                  </li>
-                
-              <li class="nav-item ml-auto"><a id="loginBtn" class="nav-link" href="/login">Login</a></li>
-              <li class="nav-item" ><a class="nav-link" href="/search" style="font-size: 20px"><i
->>>>>>> 78d3e9c71a210dc35d819ac04e98cf30698f7d78
                     class="fas fa-search"></i></a></li>
             </ul>
         </div>
     </nav>
 
-<<<<<<< HEAD
     <div class="row">
         <div class="col-sm-6">
             <h3>Get help with GameMaster</h3>
@@ -116,56 +84,24 @@
             <h6 style="color: white">CONTACT US</h6>
             <h3><span style="color: rgb(38, 255, 9)">Get In</span><span style="color: white">Touch</span></h3>
             <p style="color: white">blah blah blah</p>
-            <i class="fas fa-phone-alt" >01128933650</i>
+            <i class="fas fa-phone-alt" style="color: white">01128933650</i>
             <br>
-            <i class="far fa-envelope-open" >game@abdosoltan.me</i>
+            <i class="far fa-envelope-open" style="color: white">game@abdosoltan.me</i>
             <br>
-            <i class="fas fa-map-marker-alt" >Future City</i>
+            <i class="fas fa-map-marker-alt" style="color: white">Future City</i>
             <br>
             <hr>
             <h6 style="color: rgb(166, 255, 0)">FOLLOW ON:</h6>
             <br>
+
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fas gamil"></i></a>
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </div>
     <!-- Optional JavaScript -->
-=======
-    <div class="container">
-      <div class="row">
-          <form id="form1" style="padding: 20px;">
-              <div class="form-group" >
-                  <h3>Get help with GameMaster</h3>
-                  <hr>
-                  <br>
-                <label for="exampleInputEmail1">From</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              </div>
-              <div class="form-group">
-                  <label >subject</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" >
-              </div>
-              <div class="form-group">
-                  <label >How can we help?</label>
-                  <br>
-                  <textarea cols="40" rows="5"></textarea>
-                </div>
-            </form>
-
-      </div>
-    </div>
-    <div class="container" style="padding: 20px;">
-      <div class="row text-center justify-content-center ">
-          <button style="width: 500px; margin: 50px auto;" type="submit" class="btn btn-success">send request</button>
-      </div>
-
-    </div>
-      <!-- Optional JavaScript -->
->>>>>>> 78d3e9c71a210dc35d819ac04e98cf30698f7d78
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
