--- a/hazem/Contact us.html
+++ b/hazem/Contact us.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/1b6dbc5d1f.js"></script>
 
-    <link rel="stylesheet" href="D:\GameMasterProject\game\youssif\css/style.css">
+    <link rel="stylesheet" href="../layoutStyle.css">
     <title>Hello, world!</title>
+
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <!-- Brand -->
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="index.html">
             <h1>Logooo</h1>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -29,23 +30,23 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ">
                 <li class="nav-item">
-                    <a class="nav-link" href="/home">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/majors">Games</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard">Support</a>
+                    <a class="nav-link" href="../hazem/Contact us.html">Support</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard">About Us</a>
+                    <a class="nav-link" href="../kyrillos/About us.html">About Us</a>
                 </li>
 
                 <li class="nav-item ml-auto"><a id="loginBtn" class="nav-link" href="/login">Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="/search" style="font-size: 20px"><i
-                    class="fas fa-search"></i></a></li>
+                  class="fas fa-search"></i></a></li>
             </ul>
         </div>
     </nav>
