--- a/kyrillos/about.html
+++ b/kyrillos/about.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="../youssif/index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/majors">Games</a>
@@ -35,9 +35,11 @@
         <li class="nav-item">
             <a class="nav-link" href="../hazem/Contact us.html">Support</a>
           </li>
-        
           <li class="nav-item">
-              <a class="nav-link" href="../kyrillos/About us.html">About Us</a>
+              <a class="nav-link" href="../khaled/Features.html">Features</a>
+            </li>
+          <li class="nav-item">
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
           
         <li class="nav-item ml-auto"><a id="loginBtn" class="nav-link" href="/login">Login</a></li>
