--- a/khaled/Features.html
+++ b/khaled/Features.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 
-      <button id="backHomeButton"  class="btn btn-outline-info "><i  class="fas fa-chevron-circle-left"></i></button>
+      <a href="../youssif/index.html" id="backHomeButton"  class="btn btn-outline-info "><i  class="fas fa-chevron-circle-left"></i></a>
 <!---first div--------->
 <div class="card bg-dark text-white hcrad" >
   <img class="card-img" src="img/alien_isolation_pc_playstation_3_playstation_4_xbox_360_xbox_one_creative_assembly_sega_total_war_ellen_ripley_93431_1280x720.jpg" alt="Card image" id="fimg" >
