--- a/kyrillos/about.html
+++ b/kyrillos/about.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark ">
     <!-- Brand -->
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="../youssif/index.html">
       <h1>Logooo</h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
