--- a/youssif/index.html
+++ b/youssif/index.html
@@ -152,7 +152,7 @@
       <div class="container-fluid padding" id="look"  style="padding: 0px; margin: 0px;">
           <div class="row" style="margin: 0px; padding: 0px;">
               <div class="col-md-4">
-                  <div class="contant">
+                  <div class="contant" id="look1">
                       <h3>Gen 2 Cloud</h3>
                       <p>Oracle Cloud Infrastructure combines the elasticity and utility of <br> public cloud with the granular control, security, and predictability <br> of on-premise infrastructure.</p>
                       <div class="sub-contant">
@@ -167,7 +167,7 @@
                     </div>
               </div>
             <div class="col-md-4">
-                <div class="contant">
+                <div class="contant" id="look2">
                     <h3>Gen 2 Cloud</h3>
                     <p>Oracle Cloud Infrastructure combines the elasticity and utility of <br> public cloud with the granular control, security, and predictability <br> of on-premise infrastructure.</p>
                     <div class="sub-contant">
