--- a/youssif/index.html
+++ b/youssif/index.html
@@ -153,8 +153,8 @@
           <div class="row" style="margin: 0px; padding: 0px;">
               <div class="col-md-4">
                   <div class="contant" id="look1">
-                      <h3>Gen 2 Cloud</h3>
-                      <p>Oracle Cloud Infrastructure combines the elasticity and utility of <br> public cloud with the granular control, security, and predictability <br> of on-premise infrastructure.</p>
+                      <h3 class = "hidecontent">Gen 2 Cloud</h3>
+                      <p class = "hidecontent">Oracle Cloud Infrastructure combines the elasticity and utility of <br> public cloud with the granular control, security, and predictability <br> of on-premise infrastructure.</p>
                       <div class="sub-contant">
                           <h3>Gen 2 Cloud</h3>
                           <button type="button" class="btn btn-success">Success</button>
@@ -168,8 +168,8 @@
               </div>
             <div class="col-md-4">
                 <div class="contant" id="look2">
-                    <h3>Gen 2 Cloud</h3>
-                    <p>Oracle Cloud Infrastructure combines the elasticity and utility of <br> public cloud with the granular control, security, and predictability <br> of on-premise infrastructure.</p>
+                    <h3 class = "hidecontent">Gen 2 Cloud</h3>
+                    <p class = "hidecontent">Oracle Cloud Infrastructure combines the elasticity and utility of <br> public cloud with the granular control, security, and predictability <br> of on-premise infrastructure.</p>
                     <div class="sub-contant">
                         <h3>Gen 2 Cloud</h3>
                         <button type="button" class="btn btn-success">Success</button>
