--- a/youssif/index.html
+++ b/youssif/index.html
@@ -60,8 +60,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../kyrillos/about.html">About Us</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="products.html">Product Test</a>
+                      </li>
               
-            <li class="nav-item ml-auto"><a id="loginBtn" class="nav-link" href="/login">Login</a></li>
+            <li class="nav-item ml-auto"><a id="loginBtn" class="nav-link" href="/login">Login / Sign up</a></li>
             <li class="nav-item" ><a class="nav-link" href="/search" style="font-size: 20px"><i
                   class="fas fa-search"></i></a></li>
           </ul>
