--- a/khaled/Features.html
+++ b/khaled/Features.html
@@ -14,11 +14,11 @@
 
     <title>Features</title>
   </head>
-  <body style="background-image: url('img/stars_sky_night_113553_1280x720.jpg');">
+  <body style="background-color: black;">
 
       <a href="../youssif/index.html" id="backHomeButton"  class="btn btn-outline-info "><i  class="fas fa-chevron-circle-left"></i></a>
 <!---first div--------->
-<div class="card bg-dark text-white hcrad" >
+<div class="card bg-dark text-white hcrad" style="border: none;">
   <img class="card-img" src="img/V9Nnxj.png" alt="Card image" id="fimg" >
   <div class="card-img-overlay">
     <h1 class="card-title" id="fhead"><span >F</span>
@@ -42,8 +42,8 @@
 <br>      
 <!---Second div--------->
 
-      <div class="card mb-6" class="col-xs-12" style="width:100%; "  id="Scard">
-  <div class="row no-gutters" style="background-color: black;">
+      <div class="card mb-6" class="col-xs-12" style="width:100%;border: none; "  id="Scard">
+  <div class="row no-gutters" style="background-color: black; " >
     <div class="col-md-4">
       <img src="img/e11d5dff3c291be1485144f8f879a094-700.jpg" alt="Card image cap" id="Simg">
     </div>
