--- a/hazem/Contact us.html
+++ b/hazem/Contact us.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <!-- Brand -->
         <a class="navbar-brand" href="../youssif/index.html">
-            <h1>Logooo</h1>
+            <img src="../logo.png">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <!-- data target: is the items that you wanted in the slider-->
