--- a/hazem/Signup.html
+++ b/hazem/Signup.html
@@ -31,6 +31,10 @@
         background-attachment: fixed;  
         background-size: cover;
     }
+    form
+    {
+        padding: 3%;
+    }
     </style>
 </head>
 <body>
