update product page

--- a/youssif/products.html
+++ b/youssif/products.html
@@ -98,30 +98,30 @@
     </div>
   </div>
   <div class="container">
-    <div class="row justify-content-center" style="width: 500px; margin: 10px auto;">
+  <div class="row justify-content-center" id="info-card-container">
       <div class="info-card">
         <h5>Developer</h5>
         <p>Rockstar Games</p>
       </div>
       <div class="info-card">
-        <h5>Developer</h5>
-        <p>Rockstar Games</p>
+        <h5>Publisher</h5>
+        <p>Deep Silver</p>
       </div>
       <div class="info-card">
-        <h5>Developer</h5>
-        <p>Rockstar Games</p>
+        <h5>Release Date</h5>
+        <p>Feb 15, 2019</p>
       </div>
       <div class="info-card">
-        <h5>Developer</h5>
-        <p>Rockstar Games</p>
+        <h5>Tags</h5>
+        <p>Single Player, FPS, Shooter</p>
       </div>
       <div class="info-card">
-        <h5>Developer</h5>
-        <p>Rockstar Games</p>
+        <h5>Rateing</h5>
+        <p>MATURE 17+</p>
       </div>
       <div class="info-card">
-        <h5>Developer</h5>
-        <p>Rockstar Games</p>
+        <h5>Platform</h5>
+        <p><i class="fab fa-windows"></i></p>
       </div>
 
 
@@ -138,12 +138,12 @@
     <input type="range" class="custom-range" id="customRange" name="points1">
   </form>
 
-  <div class="container">
+  <div class="container" >
     <div class="row">
-      <div class="col-md-4">
-        <h2>Spcifications</h2>
+      <div class="col-md-3">
+        <h4>Spcifications</h4>
       </div>
-      <div class="col-md-7  info">
+      <div class="col-md-9 col-sm-12 info"  id="firstInfo">
         <div>
           <h5>Minimum</h5>
           <h6>OS</h6>
@@ -186,19 +186,43 @@
   </div>
 
   <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <h2>Available Platform</h2>
+    <div class="row ">
+      <div class="col-md-3">
+        <h4>Available Platform</h4>
       </div>
-      <div class="col-md-7 info" id="lastInfo">
-        <div><i class="fab fa-xbox"></i>  XBOX</div>
-        <div><i class="fab fa-xbox"></i>  PC</div>
-        <div><i class="fab fa-playstation"></i> PLAYSTATION</div>
-        
+      <div class="col-md-9 info" id="lastInfo">
+        <div class="container-fluid " style="margin:0px; width: 100%;">
+          <div class="row justify-content-center" style="width: 100%;">
+              <div><i class="fab fa-xbox"></i> XBOX</div>
+              <div><i class="fab fa-xbox"></i> PC</div>
+              <div><i class="fab fa-playstation"></i> PLAYSTATION</div>
+          </div>
+        </div>
       </div>
-  
     </div>
   </div>
+
+  <div class="container" style="margin-top: 50px;" id="follow-us-panle">
+      <div class="row ">
+        <div class="col-md-3">
+          <h4>Follow Us</h4>
+        </div>
+        <div class="col-md-9" id="follow-us" >
+          <div class="container"  id="follow-con">
+            <div class="row justify-content-center" style="width: 100%;">
+                <a><i class="fab fa-discord"></i></a>
+                <a><i class="fab fa-twitch"></i></a>
+                <a><i class="fab fa-twitter"> </i></a>
+                <a><i class="fab fa-facebook-square"></i></a>
+                <a><i class="fab fa-instagram"></i></a>
+                <a><i class="fab fa-youtube"></i></a>
+                <a><i class="fas fa-globe-europe"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
 
