--- a/youssif/index.html
+++ b/youssif/index.html
@@ -132,7 +132,7 @@
             
           </div>
           <div class="carousel-item active">
-            <video style="width: 100% ;height: 100%;"  autoplay>
+            <video style="width: 100% ;height: 100%;"   autoplay muted >
               <source src="../First Look at Nintendo Switch.mp4" type="video/mp4"> 
             </video>
           </div>
