update product page

--- a/khaled/Features.html
+++ b/khaled/Features.html
@@ -14,7 +14,7 @@
 
     <title>Features</title>
   </head>
-  <body style="background-image: url(img/stars_sky_night_113553_1280x720.jpg);">
+  <body style="background: url(img/stars_sky_night_113553_1280x720.jpg)  fixed; ">
 
       <a href="../youssif/index.html" id="backHomeButton"  class="btn btn-outline-info "><i  class="fas fa-chevron-circle-left"></i></a>
 <!---first div--------->
