update signup page

--- a/hazem/signlog.html
+++ b/hazem/signlog.html
@@ -20,8 +20,22 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="../layoutStyle.css">
     <link rel="stylesheet" type="text/css" href="css/signlog.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-responsive.css">
+    <style>
+      #div1
+      {
 
-    
+        background-image: url('stars_sky_night_113553_1280x720.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;	
+      }
+      body
+      {
+        min-width: 600px;
+      }
+    </style>
 
 </head>
 
@@ -68,8 +82,15 @@
           </ul>
         </div>
       </nav>
-<div class="body">
-    <div class="container" id="container">
+
+
+
+
+
+      <div class="row">
+
+<div class="body col-sm-12" id="div1" >
+     <div class="container" id="container">
         <div class="form-container sign-up-container">
 
             <form action="">
@@ -118,6 +139,26 @@
         </div>
     </div>
 </div>
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  <!-- Footer -->
     <footer class="page-footer font-small stylish-color-dark pt-4">
 
