--- a/youssif/index.html
+++ b/youssif/index.html
@@ -7,8 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
       <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/1b6dbc5d1f.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -21,8 +20,9 @@
         crossorigin="anonymous"></script>
 
       <title>Home Page</title>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="../layoutStyle.css">
+      <link rel="stylesheet" href="css/bootstrap.css">
+	    <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="../layoutstyle.css">
     </head>
 
     <body>
