--- a/youssif/products.html
+++ b/youssif/products.html
@@ -66,6 +66,9 @@
       </ul>
     </div>
   </nav>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script>
+     <script src="../js.js"></script>
   <div class="continer-fluid" id="productHead">
     <div class="row">
       <div class="col-md-1"></div>
